<resources>
    <string name="app_name">Popular Photos</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">username</string>
    <string name="caption">Caption</string>
    <string name="likes">Likes</string>
    <string name="num_likes"> 311287</string>
    <string name="CaptionUsername">CaptionUsername</string>
    <string name="timeStamp">timestamp</string>
    <string name="comments">josemontesdeoca Beautiful picture!!!</string>
    <string name="moreComments">View all XXX comments</string>
</resources>
