<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivPhotoProfile"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:paddingTop="0dp"
        android:layout_alignParentTop="true"
        android:maxHeight="60dp"
        android:maxWidth="60dp"
        android:minHeight="40dp"
        android:paddingLeft="15dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/tvUsername"
        android:textColor="#287AA9"
        android:textStyle="bold"
        android:textSize="18sp"
        android:ellipsize="end"
        android:paddingLeft="3dp"
        android:paddingBottom="3dp"
        android:layout_alignBottom="@+id/ivPhotoProfile"
        android:layout_alignTop="@+id/ivPhotoProfile"
        android:layout_toRightOf="@+id/ivPhotoProfile"
        android:layout_toEndOf="@+id/ivPhotoProfile" />

    <TextView
        android:id="@+id/tvTimeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeStamp"
        android:textSize="18sp"
        android:maxLines="3"
        android:ellipsize="end"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ivPhoto"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:minHeight="300dp"
        android:paddingTop="3dp"
        android:layout_below="@+id/ivPhotoProfile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tvNumlikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_likes"
        android:layout_below="@+id/ivPhoto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="15dp"
        android:textSize="15sp"
        android:textColor="#287AA9"
        android:textStyle="bold"
        android:maxLines="3"
        android:ellipsize="end"
        android:paddingRight="2dp"/>

    <TextView
        android:id="@+id/tvLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likes"
        android:layout_alignTop="@+id/tvNumlikes"
        android:layout_alignBottom="@+id/tvNumlikes"
        android:layout_toRightOf="@+id/tvNumlikes"
        android:layout_toEndOf="@+id/tvNumlikes"
        android:textSize="15sp"
        android:textColor="#287AA9"
        android:textStyle="bold"
        android:maxLines="3"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/tvCaptionUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CaptionUsername"
        android:layout_below="@+id/tvNumlikes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15sp"
        android:textColor="#287AA9"
        android:textStyle="bold"
        android:maxLines="3"
        android:ellipsize="end"
        android:paddingLeft="15dp"
        android:paddingRight="2dp" />

    <TextView
        android:id="@+id/tvCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caption"
        android:layout_alignTop="@+id/tvCaptionUsername"
        android:layout_alignBottom="@+id/tvCaptionUsername"
        android:layout_toRightOf="@+id/tvCaptionUsername"
        android:layout_toEndOf="@+id/tvCaptionUsername"
        android:textSize="15sp"
        android:maxLines="3"
        android:ellipsize="end" />


</RelativeLayout>